[gd_scene load_steps=2 format=3 uid="uid://weq7ye5drd5x"]

[ext_resource type="Script" path="res://season/ranking.gd" id="1_8vo2b"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8vo2b")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -29.0
offset_top = -31.0
offset_right = 1183.0
offset_bottom = 675.0
color = Color(0.545098, 0.270588, 0.0745098, 1)

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 100.0
offset_top = 14.0
offset_right = 272.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 50
text = "Season"

[node name="Label2" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 100.0
offset_top = 130.0
offset_right = 624.0
offset_bottom = 172.0
theme_override_font_sizes/font_size = 30
text = "College Football Invitational Rankings:"

[node name="Tree" type="Tree" parent="."]
offset_left = 96.0
offset_top = 195.0
offset_right = 901.0
offset_bottom = 539.0
columns = 4
column_titles_visible = true
hide_root = true
select_mode = 1

[node name="Button" type="Button" parent="."]
offset_left = 95.0
offset_top = 563.0
offset_right = 363.0
offset_bottom = 626.0
theme_override_font_sizes/font_size = 40
text = "Run Practices"

[node name="Button2" type="Button" parent="."]
offset_left = 399.0
offset_top = 563.0
offset_right = 986.0
offset_bottom = 626.0
theme_override_font_sizes/font_size = 40
text = "Simulate Next Week of Games"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
